    * Filtering: added year suffix for date filters in the collection browser.
    * Last.fm features that require user authentication are now disabled
      by default.
    * Ignore "DJ" prefix when sorting in collection browser. (BR 181955)
      Patch by Richard Longland <rlongland@hotmail.com>.

  BUGFIXES:
    * Cleaned up some tooltips/what's this strings in the Organize dialog
      to make it easier to read and, hopefully, understand. (BR 237857)
    * Fixed organize dialog's handling of the year tag. If there is no year
      then the %year token should be an empty string.(BR 237834)
    * The "Ignore 'The'" option in the organize files dialog is now case
      insensitive. (BR 237831)
    * Fixed odd header name when showing "places" in the file browser.
      (BR 238518)
    * Filenames with dots (.) and other special RegEx characters will now be
      parsed correctly when guessing tags from a filename. (BR 225743)
    * Align track details dialog's labels to the right as per KDE4's HIG.
      (BR 234555)
    * The last.fm service will now only open the wallet on startup if the user
      has enabled features that require authentication. (BR 230098)
    * Correctly load the list of labels in tag dialog. (BR 238737)
      Patch by Daniel Faust <hessijames@gmail.com>.
    * Cover manager: fixed crash if closed shortly after opening. (BR 235796)
    * Fixed Last.fm service browser not updating its view if it's open on
      startup. (BR 231044)
    * Fixed clicking on browser categories not honoring mouse settings. (BR 226533)
    * Fixed usability issue with regards to context menu item order when right
      clicking in the playlist widget. (BR 198650)


VERSION 2.3.1
  CHANGES:
    * Improved responsiveness when expanding/collapsing items in the
      collection browser when using single-click mode.
    * The Collection scanner now runs with idle priority when invoked by
      Amarok. Batch scan users can invoke it with the --idlepriority flag.
