@@ -27,6 +27,7 @@ VERSION 2.3.2-Beta 1
       Patch by Richard Longland <rlongland@hotmail.com>.
 
   BUGFIXES:
+    * Fixed tracks not changing for "stop after this track" action. (BR 231209)
     * Cleaned up some tooltips/what's this strings in the Organize dialog
       to make it easier to read and, hopefully, understand. (BR 237857)
     * Fixed organize dialog's handling of the year tag. If there is no year
